# semanticfusion

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  class_colour_scheme.data
src/: main.cpp
src/cnn_interface/: CaffeInterface.cpp  CaffeInterface.h
src/gui/: Gui.cpp  Gui.h  GuiCuda.cu  GuiCuda.h
src/map_interface/: ElasticFusionCuda.cu  ElasticFusionCuda.h  ElasticFusionInterface.cpp  ElasticFusionInterface.h
src/semantic_fusion/: SemanticFusionCuda.cu  SemanticFusionCuda.h  SemanticFusionInterface.cpp  SemanticFusionInterface.h
src/semantic_fusion/CRF/: densecrf.cpp  densecrf.h  fastmath.h  permutohedral.h  util.h
src/utilities/: Array.cpp  Array.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  PNGLogReader.cpp  PNGLogReader.h  Types.h
